<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">keisan</string>
    <string name="result">結果</string>
    <string name="title">計算\nやらないか？</string>
    <string name="Button1">1</string>
    <string name="Button2">2</string>
    <string name="Button3">3</string>
    <string name="Button4">4</string>
    <string name="Button5">5</string>
    <string name="Button6">6</string>
    <string name="Button7">7</string>
    <string name="Button8">8</string>
    <string name="Button9">9</string>
    <string name="Button10">0</string>
    <string name="Button11">Clear</string>
    <string name="Button12">Enter</string>
    <string name="NormalMode">通常モード</string>
    <string name="EndlessMode">エンドレスモード</string>
    <string name="Restart">もう一回</string>
    <string name="highScore">ハイスコア：</string>

</resources>