<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textViewcounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:textColor="#1E90FF"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/textViewAnswer"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="#000080"
        android:ems="10"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="50sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2" >

        <TableRow>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="220dp"
                android:onClick="inputNumber"
                android:text="@string/Button1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="220dp"
                android:onClick="inputNumber"
                android:text="@string/Button2" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="220dp"
                android:onClick="inputNumber"
                android:text="@string/Button3" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="inputNumber"
                android:text="@string/Button4" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="inputNumber"
                android:text="@string/Button5" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="inputNumber"
                android:text="@string/Button6" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="inputNumber"
                android:text="@string/Button7" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="inputNumber"
                android:text="@string/Button8" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="inputNumber"
                android:text="@string/Button9" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="inputNumber"
                android:text="@string/Button10" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="inputClear"
                android:text="@string/Button11" />

            <Button
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="inputEnter"
                android:text="@string/Button12" />
        </TableRow>
    </TableLayout>

</RelativeLayout>